# hyprswipe

./: .gitignore  LICENSE  README.md  flake.nix  hyprland.nix  meson.build
src/: main.cpp
